--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.2'
 }
 
+shadowJar {
+    classifier = null
+}
+
 def lint = [
         "auxiliaryclass",
         "cast",
