--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     compile 'space.npstr:Magma:0.8.1'
     compile 'com.sedmelluq:lavaplayer:1.3.10'
     compile 'com.sedmelluq:jda-nas:1.0.6'
-    compile 'com.github.shredder121:jda-async-packetprovider:1.2'
+    compile 'com.github.shredder121:jda-async-packetprovider:1.3'
+    compile 'org.apache.commons:commons-lang3:3.8.1'
 
     compile 'com.github.singyeong:java-client:5c53983'
 
