send connection id via websocket for clients that don't have access to response headers (eg vert.x)
update example config

--- a/config.json.example
+++ b/config.json.example
@@ -31,8 +31,7 @@
         },
         "singyeong": {
             "enabled": false,
-            "url": "ws://localhost:9876/gateway/websocket",
-            "app-id": "andesite-audio"
+            "dsn": "singyeong://andesite@localhost:9876"
         }
     },
     "source": {
