move audio send factory creation to magma handler, allow reusing an array instead of creating a new one (don't complain if it crashes, there's a good reason it isn't the default)

--- a/config.json.example
+++ b/config.json.example
@@ -2,6 +2,10 @@
     "log-level": "info",
     "password": "you shall not pass",
     "audio-handler": "magma",
+    "magma": {
+        "array-provider": "create-new",
+        "__comment__": "change this at your own risk. DON'T COMPLAIN IF IT CRASHES"
+    },
     "lavalink": {
         "ws-path": "/lavalink"
     },
