use absolute urls in docs include api jar in releases update version

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java-library'
 }
 
+archivesBaseName = 'andesite-api'
+
 repositories {
     jcenter()
     maven { url 'https://jitpack.io' }
