--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ deploy:
     file:
       - build/libs/*
       - jattach-debug-plugin/build/libs/*
+      - api/build/libs/*
     skip_cleanup: true
     on:
       tags: true
