--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'com.palantir.docker' version '0.21.0'
 }
 
-def versionObj = new Version(major: 0, minor: 10, revision: 0)
+def versionObj = new Version(major: 0, minor: 11, revision: 0)
 
 allprojects {
     group 'com.github.natanbc'
@@ -103,6 +103,7 @@ task buildAll {}
 tasks.docker.dependsOn buildAll
 tasks.docker.dependsOn ':jattach-debug-plugin:jar'
 buildAll.dependsOn ':jattach-debug-plugin:jar'
+buildAll.dependsOn ':api:jar'
 
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
