--- a/api/build.gradle
+++ b/api/build.gradle
@@ -20,7 +20,9 @@ dependencies {
     api "com.github.natanbc:lavadsp:$lavadspVersion"
     
     //Singyeong connection support
-    api "com.github.singyeong:java-client:$singyeongVersion"
+    api("com.github.singyeong:java-client:$singyeongVersion") {
+        exclude group: 'org.projectlombok', module: 'lombok'
+    }
 
     //Code safety
     api "com.google.code.findbugs:jsr305:$jsr305Version"
