--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ deploy:
       - jattach-debug-plugin/build/libs/*
       - api/build/libs/*
     skip_cleanup: true
+    name: $TRAVIS_TAG
     on:
       tags: true
   - provider: script
