--- a/api/build.gradle
+++ b/api/build.gradle
@@ -15,12 +15,12 @@ javadoc {
     failOnError = false
     options.encoding = "UTF-8"
     options.addBooleanOption('html5', true)
+    options.addBooleanOption("-no-module-directories", true)
     if(options instanceof StandardJavadocDocletOptions) {
         options
                 .linkSource()
                 .noDeprecated()
                 .links(
-                    "https://docs.oracle.com/en/java/javase/$targetCompatibility/docs/api/",
                     "https://vertx.io/docs/$vertxWebVersion/apidocs/",
                     "https://static.javadoc.io/com.google.code.findbugs/jsr305/$jsr305Version/",
                     "https://natanbc.github.io/lavadsp/"
