--- a/api/build.gradle
+++ b/api/build.gradle
@@ -95,7 +95,7 @@ bintray {
 }
 
 String getProjectProperty(String propertyName) {
-    String property = ""
+    String property;
     if(hasProperty(propertyName)) {
         property = project.properties[propertyName]
     } else {
