allow configuring the youtube source manager (playlist page count and mix loader pool size)

--- a/config.json.example
+++ b/config.json.example
@@ -48,5 +48,9 @@
         "twitch": true,
         "vimeo": true,
         "youtube": true
+    },
+    "youtube": {
+        "max-playlist-page-count": 6,
+        "mix-loader-max-pool-size": 10
     }
 }
