--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'com.palantir.docker' version '0.21.0'
 }
 
-def versionObj = new Version(major: 0, minor: 15, revision: 2)
+def versionObj = new Version(major: 0, minor: 15, revision: 3)
 
 allprojects {
     group 'com.github.natanbc'
@@ -20,7 +20,7 @@ ext {
     vertxWebVersion =   '3.6.3'
     magmaVersion =      '0.8.3'
     lavaplayerVersion = '1.3.10'
-    lavadspVersion =    '0.4'
+    lavadspVersion =    '0.5.1'
     jdaNasVersion =     '1.0.6'
     singyeongVersion =  '829d574'
     logbackVersion =    '1.2.3'
@@ -36,6 +36,7 @@ mainClassName = 'andesite.node.Andesite'
 
 repositories {
     jcenter()
+    maven { url 'https://dl.bintray.com/natanbc/maven' }
     maven { url 'https://jitpack.io' }
 }
 
