*sigh* why am i still trying
fixed build for real

--- a/jattach-debug-plugin/build.gradle
+++ b/jattach-debug-plugin/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 repositories {
     jcenter()
+    maven { url 'https://dl.bintray.com/natanbc/maven' }
     maven { url 'https://jitpack.io' }
 }
 
