--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'com.palantir.docker' version '0.21.0'
 }
 
-def versionObj = new Version(major: 0, minor: 16, revision: 2)
+def versionObj = new Version(major: 0, minor: 17, revision: 0)
 
 allprojects {
     group 'com.github.natanbc'
@@ -17,6 +17,7 @@ allprojects {
 
 ext {
     //@formatter:off
+    configVersion =     '1.3.2'
     vertxWebVersion =   '3.7.0'
     magmaVersion =      '0.8.3'
     lavaplayerVersion = '1.3.16'
@@ -43,7 +44,8 @@ repositories {
 dependencies {
     compile project(':api')
 
-
+    //Config
+    compile "com.typesafe:config:$configVersion"
     
     //REST, WebSocket, etc
     compile "io.vertx:vertx-web:$vertxWebVersion"
