--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'com.palantir.docker' version '0.21.0'
 }
 
-def versionObj = new Version(major: 0, minor: 17, revision: 2)
+def versionObj = new Version(major: 0, minor: 18, revision: 0)
 
 allprojects {
     group 'com.github.natanbc'
@@ -23,7 +23,7 @@ ext {
     lavaplayerVersion = '1.3.16'
     lavadspVersion =    '0.5.2'
     jdaNasVersion =     '1.0.6'
-    singyeongVersion =  '829d574'
+    singyeongVersion =  '7c8ce56'
     logbackVersion =    '1.2.3'
     sentryVersion =     '1.7.22'
     prometheusVersion = '0.6.0'
@@ -187,6 +187,7 @@ task sourcesForRelease(type: Copy) {
                 VERSION_MINOR:    versionObj.minor,
                 VERSION_REVISION: versionObj.revision,
                 COMMIT:           getCommitHash(),
+                BUILD_NUMBER:     getBuildNumber()
         ])
     }
     into 'build/filteredSrc'
@@ -230,4 +231,23 @@ static def getCommitHash() {
     def p = Runtime.getRuntime().exec("git rev-parse HEAD")
     p.waitFor()
     p.getIn().text.trim()
+}
+
+def getBuildNumber() {
+    def properties = [
+            "BUILD_NUMBER",
+            "TRAVIS_BUILD_NUMBER"
+    ]
+    for(name in properties) {
+        String property
+        if(hasProperty(name)) {
+            property = project.properties[name]
+        } else {
+            property = System.getenv(name) ?: ""
+        }
+        if(property != "") {
+            return property
+        }
+    }
+    return "unable to find build number"
 }
