--- a/application.conf.example
+++ b/application.conf.example
@@ -37,7 +37,9 @@ andesite {
   }
 
   lavaplayer {
+    frame-buffer-duration = 5000
     non-allocating = true
+
     youtube {
       max-playlist-page-count = 6
       mix-loader-max-pool-size = 10
