--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,6 +5,9 @@ plugins {
     id 'com.jfrog.bintray' version '1.8.4'
 }
 
+sourceCompatibility = 11
+targetCompatibility = 11
+
 archivesBaseName = 'andesite-api'
 
 repositories {
