--- a/jattach-debug-plugin/build.gradle
+++ b/jattach-debug-plugin/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java'
 }
 
+sourceCompatibility = 11
+targetCompatibility = 11
+
 repositories {
     jcenter()
     maven { url 'https://dl.bintray.com/natanbc/maven' }
