--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ ext {
     //@formatter:off
     configVersion =     '1.3.4'
     vertxWebVersion =   '3.7.0'
-    magmaVersion =      '0.8.3'
+    magmaVersion =      '0.9.2'
     lavaplayerVersion = '1.3.17'
     lavadspVersion =    '0.5.2'
     jdaNasVersion =     '1.0.6'
@@ -51,7 +51,7 @@ dependencies {
     compile "io.vertx:vertx-web:$vertxWebVersion"
 
     //Raw audio -> udp packet
-    compile "space.npstr:Magma:$magmaVersion"
+    compile "club.minnced:magma:$magmaVersion"
 
     //Audio player
     compile "com.sedmelluq:lavaplayer:$lavaplayerVersion"
@@ -84,8 +84,14 @@ dependencies {
 }
 
 docker {
-    name "natanbc/andesite:${versionObj}"
-    tag 'latest', 'natanbc/andesite:latest'
+    name "natanbc/andesite:${getCommitHash()}"
+    tag 'latest-current-branch', "natanbc/andesite:${getBranchName()}"
+    //only set latest tag for releases, so `docker pull natanbc/andesite`
+    //pulls the latest stable version
+    if(!System.getenv("TAG")?.trim()?.isEmpty()) {
+        tag 'versioned', "natanbc/andesite:${versionObj}"
+        tag 'latest', 'natanbc/andesite:latest'
+    }
     files "build/libs/andesite-node-${versionObj}-all.jar",
             project(':jattach-debug-plugin').getTasksByName('jar', false).outputs,
             project(':jfr-debug-plugin').getTasksByName('jar', false).outputs
@@ -236,6 +242,12 @@ class Version {
 
 static def getCommitHash() {
     def p = Runtime.getRuntime().exec("git rev-parse HEAD")
+    p.waitFor()
+    p.getIn().text.trim()
+}
+
+static def getBranchName() {
+    def p = Runtime.getRuntime().exec("git rev-parse --symbolic-full-name --abbrev-ref HEAD")
     p.waitFor()
     p.getIn().text.trim()
 }
