--- a/build.gradle
+++ b/build.gradle
@@ -17,19 +17,20 @@ allprojects {
 
 ext {
     //@formatter:off
-    configVersion =     '1.3.4'
-    vertxWebVersion =   '3.8.0'
-    magmaVersion =      '0.10.4'
-    lavaplayerVersion = '1.3.19'
-    lavadspVersion =    '0.5.2'
-    jdaNasVersion =     '1.1.0'
-    singyeongVersion =  '8de14db'
-    logbackVersion =    '1.2.3'
-    sentryVersion =     '1.7.25'
-    prometheusVersion = '0.6.0'
-    jsr305Version =     '3.0.2'
+    configVersion =         '1.3.4'
+    jdaNasVersion =         '1.1.0'
+    jsr305Version =         '3.0.2'
+    lavaplayerVersion =     '1.3.19'
+    lavadspVersion =        '0.5.2'
+    logbackVersion =        '1.2.3'
+    magmaVersion =          '0.10.4'
+    nativeLoaderVersion =   '0.3.0' 
+    prometheusVersion =     '0.6.0'
+    sentryVersion =         '1.7.25'
+    singyeongVersion =      '8de14db'
+    vertxWebVersion =       '3.8.0'
     
-    jattachVersion =    'v1.5'
+    jattachVersion =        'v1.5'
     //@formatter:on
 }
 
@@ -58,6 +59,8 @@ dependencies {
 
     //Audio filters
     compile "com.github.natanbc:lavadsp:$lavadspVersion"
+    //override the native loader version lavadsp uses
+    compile "com.github.natanbc:native-loader:$nativeLoaderVersion"
 
     //Native send system
     compile "com.sedmelluq:jda-nas:$jdaNasVersion"
