--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 	id 'com.palantir.docker' version '0.22.1'
 }
 
-def versionObj = new Version(major: 0, minor: 18, revision: 6)
+def versionObj = new Version(major: 0, minor: 18, revision: 7)
 
 sourceCompatibility = 11
 targetCompatibility = 11
@@ -20,10 +20,11 @@ ext {
     configVersion =         '1.3.4'
     jdaNasVersion =         '1.1.0'
     jsr305Version =         '3.0.2'
+    koeVersion =            '454cfec'
     lavaplayerVersion =     '1.3.19'
     lavadspVersion =        '0.5.2'
     logbackVersion =        '1.2.3'
-    magmaVersion =          '0.10.4'
+    magmaVersion =          '0.10.0'
     nativeLoaderVersion =   '0.3.0' 
     prometheusVersion =     '0.6.0'
     sentryVersion =         '1.7.25'
@@ -51,8 +52,11 @@ dependencies {
     //REST, WebSocket, etc
     compile "io.vertx:vertx-web:$vertxWebVersion"
 
-    //Raw audio -> udp packet
+    //Audio sending
     compile "club.minnced:magma:$magmaVersion"
+
+    //Audio sending
+    //compile "moe.kyokobot:koe:$koeVersion"
 
     //Audio player
     compile "com.sedmelluq:lavaplayer:$lavaplayerVersion"
