--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ ext {
     lavaplayerVersion =     '1.3.27'
     lavadspVersion =        '0.5.2'
     logbackVersion =        '1.2.3'
-    magmaVersion =          '0.10.4'
+    magmaVersion =          '0.12.6'
     nativeLoaderVersion =   '0.3.0' 
     prometheusVersion =     '0.7.0'
     sentryVersion =         '1.7.27'
@@ -53,7 +53,7 @@ dependencies {
     compile "io.vertx:vertx-web:$vertxWebVersion"
 
     //Audio sending
-    compile "club.minnced:magma:$magmaVersion"
+    compile "space.npstr.magma:magma:$magmaVersion"
 
     //Audio sending
     //compile "moe.kyokobot:koe:$koeVersion"
