--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '4.0.4'
-	id 'com.palantir.docker' version '0.22.1'
+	id 'com.palantir.docker' version '0.25.0'
 }
 
-def versionObj = new Version(major: 0, minor: 18, revision: 9)
+def versionObj = new Version(major: 0, minor: 19, revision: 0)
 
 sourceCompatibility = 11
 targetCompatibility = 11
@@ -17,19 +17,19 @@ allprojects {
 
 ext {
     //@formatter:off
-    configVersion =         '1.3.4'
+    configVersion =         '1.4.0'
     jdaNasVersion =         '1.1.0'
     jsr305Version =         '3.0.2'
     koeVersion =            '454cfec'
-    lavaplayerVersion =     '1.3.27'
+    lavaplayerVersion =     '1.3.46'
     lavadspVersion =        '0.5.2'
     logbackVersion =        '1.2.3'
-    magmaVersion =          '0.10.4'
+    magmaVersion =          '0.12.6'
     nativeLoaderVersion =   '0.3.0' 
-    prometheusVersion =     '0.7.0'
-    sentryVersion =         '1.7.27'
+    prometheusVersion =     '0.8.1'
+    sentryVersion =         '1.7.30'
     singyeongVersion =      '8de14db'
-    vertxWebVersion =       '3.8.1'
+    vertxWebVersion =       '3.9.0'
     
     jattachVersion =        'v1.5'
     //@formatter:on
@@ -53,7 +53,7 @@ dependencies {
     compile "io.vertx:vertx-web:$vertxWebVersion"
 
     //Audio sending
-    compile "club.minnced:magma:$magmaVersion"
+    compile "space.npstr.magma:magma:$magmaVersion"
 
     //Audio sending
     //compile "moe.kyokobot:koe:$koeVersion"
