--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -43,7 +43,14 @@ andesite {
 
     youtube {
       max-playlist-page-count = 6
-      mix-loader-max-pool-size = 10
+
+      rotation {
+        ips = []
+        excluded-ips = []
+        strategy = "RotateOnBan"
+        search-triggers-fail = true
+        retry-limit = -1
+      }
     }
   }
 
