--- a/build.gradle
+++ b/build.gradle
@@ -17,22 +17,23 @@ allprojects {
 
 ext {
     //@formatter:off
-    configVersion =         '1.4.0'
-    jdaNasVersion =         '1.1.0'
-    jsr305Version =         '3.0.2'
-    koeVersion =            '64b28abee9'
-    lavaplayerVersion =     'a63c541dc5'
-    ytRotatorVersion =      '0.1.7'
-    lavadspVersion =        '0.5.2'
-    logbackVersion =        '1.2.3'
-    magmaVersion =          '0.12.5'
-    nativeLoaderVersion =   '0.3.0' 
-    prometheusVersion =     '0.9.0'
-    sentryVersion =         '1.7.30'
-    singyeongVersion =      '8de14db'
-    vertxWebVersion =       '3.9.3'
+    configVersion =            '1.4.0'
+    jdaNasVersion =            '1.1.0'
+    jsr305Version =            '3.0.2'
+    koeVersion =               '64b28abee9'
+    lavaplayerVersion =        'a63c541dc5'
+    lavaplayerNativesVersion = '1.3.13'
+    ytRotatorVersion =         '0.1.7'
+    lavadspVersion =           '0.5.2'
+    logbackVersion =           '1.2.3'
+    magmaVersion =             '0.12.5'
+    nativeLoaderVersion =      '0.3.0'
+    prometheusVersion =        '0.9.0'
+    sentryVersion =            '1.7.30'
+    singyeongVersion =         '8de14db'
+    vertxWebVersion =          '3.9.3'
     
-    jattachVersion =        'v1.5'
+    jattachVersion =           'v1.5'
     //@formatter:on
 }
 
@@ -65,6 +66,8 @@ dependencies {
 
     //Audio player
     compile "com.github.Devoxin:lavaplayer:$lavaplayerVersion"
+    compile "com.sedmelluq:lavaplayer-natives-extra:$lavaplayerNativesVersion"
+
 
     //IPv6 rotation
     compile "com.sedmelluq:lavaplayer-ext-youtube-rotator:$ytRotatorVersion"
