fix javadoc options, fix docker build, update jdk version on travis

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -22,14 +22,17 @@ javadoc {
     failOnError = false
     options.encoding = "UTF-8"
     options.addBooleanOption('html5', true)
-    options.addBooleanOption("-no-module-directories", true)
+    options.addStringOption('Xdoclint:none', '-quiet')
+    //options.addBooleanOption("-no-module-directories", true)
     if(options instanceof StandardJavadocDocletOptions) {
         options
                 .linkSource()
+                .keyWords()
+                .use()
                 .noDeprecated()
                 .links(
-                    "https://vertx.io/docs/$vertxWebVersion/apidocs/",
-                    "https://static.javadoc.io/com.google.code.findbugs/jsr305/$jsr305Version/",
+                    "https://vertx.io/docs/apidocs/",
+                    "https://www.javadoc.io/doc/com.google.code.findbugs/jsr305/$jsr305Version/",
                     "https://natanbc.github.io/lavadsp/"
                 )
                 .charSet("UTF-8")
