--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,8 @@ docker {
         tag 'versioned', "natanbc/andesite:${versionObj}"
         tag 'latest', 'natanbc/andesite:latest'
     }
-    files "build/libs/andesite-${versionObj}-all.jar",
+    files "build/libs/andesite-${versionObj}-linux-x86-64.jar",
+            "build/libs/andesite-${versionObj}-linux-x86-64-musl.jar",
             project(':jattach-debug-plugin').getTasksByName('jar', false).outputs,
             "jlink.sh"
     buildArgs([
