--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ ext {
     jdaNasVersion =            '1.1.0'
     jsr305Version =            '3.0.2'
     koeVersion =               '64b28abee9'
+    nettyEpollVersion =        '4.1.52.Final'
     nettyKQueueVersion =       '4.1.52.Final'
     lavaplayerVersion =        'a63c541dc5'
     lavaplayerNativesVersion = '1.3.13'
@@ -64,8 +65,9 @@ dependencies {
     }
     compile "moe.kyokobot.koe:ext-udpqueue:$koeVersion"
 
-    //KQueue based transport
-    compile "io.netty:netty-transport-native-kqueue:$nettyKQueueVersion"
+    //Native transports
+    compile "io.netty:netty-transport-native-epoll:$nettyEpollVersion:linux-x86_64"
+    compile "io.netty:netty-transport-native-kqueue:$nettyKQueueVersion:osx-x86_64"
 
     //Audio player
     compile "com.github.Devoxin:lavaplayer:$lavaplayerVersion"
