allow choosing gateway version

--- a/application.conf.example
+++ b/application.conf.example
@@ -75,6 +75,7 @@ andesite {
   }
 
   koe {
+    gateway = v4
     transport = default
     byte-buf-allocator = netty-default
     high-packet-priority = true
