--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -80,6 +80,7 @@ andesite {
   }
 
   koe {
+    gateway = v4
     transport = default
     byte-buf-allocator = netty-default
     high-packet-priority = true
